--- a/django/cmstest/assets/themes/gears/css/style.css
+++ b/django/cmstest/assets/themes/gears/css/style.css
@@ -1,136 +1,136 @@
-@font-face { 
-  font-family: Droid Sans; 
-    src: url('../fonts/DroidSans-webfont.eot'); 
-    src: local("Droid Sans"), url('../fonts/DroidSans-webfont.woff'); 
-} 
+@font-face {
+  font-family: Droid Sans;
+    src: url('../fonts/DroidSans-webfont.eot');
+    src: local("Droid Sans"), url('../fonts/DroidSans-webfont.woff');
+}
 
-@font-face { 
-  font-family: News Cycle; 
-    src: url('../fonts/NewsCycle-Regular.eot'); 
-    src: local("News Cycle"), url('../fonts/NewsCycle-Regular.ttf'); 
-} 
+@font-face {
+  font-family: News Cycle;
+    src: url('../fonts/NewsCycle-Regular.eot');
+    src: local("News Cycle"), url('../fonts/NewsCycle-Regular.ttf');
+}
 
-html { 
+html {
   height: 100%;
 }
 
-* { 
+* {
   margin: 0;
   padding: 0;
 }
 
 /* tell the browser to render HTML 5 elements as block */
-article, aside, figure, footer, header, hgroup, nav, section { 
+article, aside, figure, footer, header, hgroup, nav, section {
   display:block;
 }
 
-body { 
+body {
   font: normal .80em 'Droid Sans', arial, sans-serif;
   background: #F9F9F9;
   color: #FFF;
 }
 
-p { 
+p {
   padding: 0 0 16px 0;
   line-height: 1.7em;
 }
 
-img { 
+img {
   border: 0;
 }
 
-h1, h2, h3, h4, h5, h6 { 
+h1, h2, h3, h4, h5, h6 {
   color: #FFF;
   letter-spacing: 0em;
   padding: 0 0 5px 0;
 }
 
-h1, h2, h3 { 
+h1, h2, h3 {
   font: normal 140% 'News Cycle', arial;
   margin: 0 0 15px 0;
   padding: 15px 0 5px 0;
 }
 
-h2 { 
+h2 {
   font-size: 160%;
   padding: 9px 0 5px 0;
 }
 
-h3 { 
+h3 {
   font-size: 140%;
   padding: 5px 0 0 0;
 }
 
-h4, h6 { 
+h4, h6 {
   padding: 0 0 5px 0;
   font: normal 120% 'Droid Sans', arial, sans-serif;
 }
 
-h5, h6 { 
+h5, h6 {
   font: italic 100% 'Droid Sans', arial;
   padding: 0 0 15px 0;
 }
 
-h6 { 
+h6 {
   font: normal 100% 'Droid Sans', arial;
 }
 
-a, a:hover { 
+a, a:hover {
   outline: none;
   text-decoration: none;
-  color: #4D8D01;
+  color: #80720B;
 }
 
-a:hover { 
+a:hover {
   text-decoration: underline;
 }
 
-blockquote { 
-  margin: 20px 0; 
+blockquote {
+  margin: 20px 0;
   padding: 10px 20px 0 20px;
   border: 1px solid #E5E5DB;
   background: #FFF;
 }
 
-ul { 
+ul {
   margin: 2px 0 22px 17px;
 }
 
-ul li { 
+ul li {
   list-style-type: circle;
-  margin: 0 0 6px 0; 
+  margin: 0 0 6px 0;
   padding: 0 0 4px 5px;
   line-height: 1.5em;
 }
 
-ol { 
+ol {
   margin: 8px 0 22px 20px;
 }
 
-ol li { 
+ol li {
   margin: 0 0 11px 0;
 }
 
-.left { 
+.left {
   float: left;
   width: auto;
   margin-right: 10px;
 }
 
-.right { 
-  float: right; 
+.right {
+  float: right;
   width: auto;
   margin-left: 10px;
 }
 
-.center { 
+.center {
   display: block;
   text-align: center;
   margin: 20px auto;
 }
 
-#main, #container, #logo, #site_content, footer { 
-  margin-left: auto; 
+#main, #container, #logo, #site_content, footer {
+  margin-left: auto;
   margin-right: auto;
 }
 
@@ -139,77 +139,80 @@ ol li {
 }
 
 
-header { 
+header {
   background: #444 url(../images/logo.jpg) no-repeat;
   height: 200px;
+  background-size: cover;
+  background-repeat: no-repeat;
+  z-index: -100;
 }
 
-#logo { 
+#logo {
   width: 1000px;
   height: 180px;
-  background: transparent;
-  color: #888;
-  padding: 20px 0 0 0;  
+  /*background: transparent;*/
+  /*color: #888;*/
+  padding: 20px 0 0 0;
 }
 
-#logo #logo_text { 
-  width: 330px;
-  border-radius: 7px;
-  -moz-border-radius: 7px;
-  -webkit-border: 7px;
-  background: transparent url(../images/menubar.png);
-  left: 0;
-  padding: 10px 20px 20px 20px;
+#logo #logo_text {
+  /*width: 330px;*/
+  /*border-radius: 7px;*/
+  /*-moz-border-radius: 7px;*/
+  /*-webkit-border: 7px;*/
+  /*background: transparent url(../images/menubar.png);*/
+  /*left: 0;*/
+  /*padding: 10px 20px 20px 20px;*/
 }
 
-#logo h1, #logo h2 { 
+#logo h1, #logo h2 {
   font: normal 250% 'News Cycle', arial, sans-serif;
   border-bottom: 0;
   text-transform: none;
   margin: 0;
 }
 
-#logo_text h1, #logo_text h1 a, #logo_text h1 a:hover { 
+#logo_text h1, #logo_text h1 a, #logo_text h1 a:hover {
   padding: 0;
   color: #FFF;
   text-decoration: none;
 }
 
-#logo_text h1 a .logo_colour { 
-  color: #4D8D01;
+#logo_text h1 a .logo_colour {
+  color: #80720B;
   text-shadow: 1px 1px #294701;
 }
 
-#logo_text a:hover .logo_colour { 
+#logo_text a:hover .logo_colour {
   color: #FFF;
 }
 
-#logo_text h2 { 
+#logo_text h2 {
   font-size: 140%;
   padding: 0 0 0 0;
   color: #FFF;
 }
 
-nav { 
+nav {
   height: 44px;
   margin: -44px auto 0 auto;
-  color: #fef4e9;
-  background: transparent url(../images/menubar.png);
-} 
+  background-color: #000;
+  opacity: 0.8;
+}
 
-#menu_container { 
+#menu_container {
   width: 1000px;
   margin: 0 auto 0 auto;
 }
 
-#site_content { 
+#site_content {
   width: 1000px;
   overflow: hidden;
   margin: 0px auto 0 auto;
   padding: 15px 0 25px 0;
-  text-shadow: 0 1px #000;} 
+  text-shadow: 0 1px #000;}
 
-#sidebar_container { 
+#sidebar_container {
   float: left;
   width: 234px;
   margin-top: 20px;
@@ -220,191 +223,191 @@ nav {
   border: 1px solid #323232;
   border-radius: 7px 7px 7px 7px;
   -moz-border-radius: 7px 7px 7px 7px;
-  -webkit-border: 7px 7px 7px 7px;  
+  -webkit-border: 7px 7px 7px 7px;
 }
 
-.sidebar { 
+.sidebar {
   width: 200px;
   margin: 0 0 0px 0;
   padding: 0 15px 5px 13px;}
-  
-.sidebar h3, .content h1 { 
+
+.sidebar h3, .content h1 {
   padding: 0 15px 20px 0;
   font: 200% 'News Cycle', arial, sans-serif;
   text-shadow:  #000 0 1px;
   margin: 0 1px;
 }
 
-.sidebar h3 { 
+.sidebar h3 {
   padding: 4px 15px 9px 0;
   font: 200% 'News Cycle', arial, sans-serif;
 }
 
-.sidebar ul { 
+.sidebar ul {
   margin: 0 0 15px 0;
-} 
+}
 
-.sidebar li a, .sidebar li a:hover { 
+.sidebar li a, .sidebar li a:hover {
   color: #FFF;
   text-decoration: none;
-} 
+}
 
-.sidebar li a:hover { 
+.sidebar li a:hover {
   text-decoration: underline;
-} 
+}
 
-.sidebar_item, .content_item { 
+.sidebar_item, .content_item {
   padding: 15px 0;
 }
 
-.content { 
+.content {
   text-align: left;
   width: 740px;
   margin: 0 0 15px 0;
   float: right;
   font-size: 120%;
   padding: 14px 0 0 0;}
-  
-.content ul { 
+
+.content ul {
   margin: 2px 0 22px 0px;
 }
 
-.content ul li, .sidebar ul li { 
+.content ul li, .sidebar ul li {
   list-style-type: none;
   background: url(../images/bullet.png) no-repeat;
-  margin: 0 0 0 0; 
+  margin: 0 0 0 0;
   padding: 0 0 4px 28px;
   line-height: 1.5em;
 }
 
-footer { 
+footer {
   font: 100% 'Droid Sans', arial, sans-serif;
   height: 125px;
   padding: 28px 0 5px 0;
-  text-align: center; 
+  text-align: center;
   background: #1D1D1D;
   color: #FFF;
   margin: 0;
-  border-top: 6px solid #4D8D01;
+  border-top: 6px solid #80720B;
 }
 
-footer p { 
+footer p {
   line-height: 1.7em;
   padding: 0 0 10px 0;
 }
 
-footer a { 
+footer a {
   color: #FFF;
   text-decoration: none;
 }
 
-footer a:hover { 
+footer a:hover {
   color: #FFF;
   text-decoration: underline;
 }
 
-.form_settings { 
+.form_settings {
   margin: 15px 0 0 0;
 }
 
-.form_settings p { 
+.form_settings p {
   padding: 0 0 4px 0;
 }
 
-.form_settings span { 
-  float: left; 
-  width: 200px; 
+.form_settings span {
+  float: left;
+  width: 200px;
   text-align: left;
 }
-  
-.form_settings input, .form_settings textarea { 
-  padding: 5px; 
-  width: 299px; 
-  font: 100% 'Droid Sans', arial; 
-  border: 1px solid #E5E5DB; 
-  background: #FFF; 
+
+.form_settings input, .form_settings textarea {
+  padding: 5px;
+  width: 299px;
+  font: 100% 'Droid Sans', arial;
+  border: 1px solid #E5E5DB;
+  background: #FFF;
   color: #47433F;
   border-radius: 7px 7px 7px 7px;
   -moz-border-radius: 7px 7px 7px 7px;
-  -webkit-border: 7px 7px 7px 7px;  
+  -webkit-border: 7px 7px 7px 7px;
 }
-  
-.form_settings .submit { 
-  font: 100% 'Droid Sans', arial; 
-  border: 0; 
-  width: 99px; 
-  margin: 0 0 0 212px; 
+
+.form_settings .submit {
+  font: 100% 'Droid Sans', arial;
+  border: 0;
+  width: 99px;
+  margin: 0 0 0 212px;
   height: 33px;
   padding: 2px 0 3px 0;
-  cursor: pointer; 
-  background: #1A1225; 
+  cursor: pointer;
+  background: #1A1225;
   color: #FFF;
   border-radius: 7px 7px 7px 7px;
   -moz-border-radius: 7px 7px 7px 7px;
-  -webkit-border: 7px 7px 7px 7px;  
+  -webkit-border: 7px 7px 7px 7px;
 }
 
-.form_settings textarea, .form_settings select { 
-  font: 100% 'Droid Sans', arial; 
+.form_settings textarea, .form_settings select {
+  font: 100% 'Droid Sans', arial;
   width: 299px;
 }
 
-.form_settings select { 
+.form_settings select {
   width: 310px;
 }
 
-.form_settings .checkbox { 
-  margin: 4px 0; 
-  padding: 0; 
+.form_settings .checkbox {
+  margin: 4px 0;
+  padding: 0;
   width: 14px;
   border: 0;
   background: none;
 }
 
-.separator { 
+.separator {
   width: 100%;
   height: 0;
   border-top: 1px solid #D9D5CF;
   border-bottom: 1px solid #FFF;
   margin: 0 0 20px 0;
 }
-  
-table { 
+
+table {
   margin: 10px 0 30px 0;
 }
 
-table tr th, table tr td { 
+table tr th, table tr td {
   background: #555;
   color: #FFF;
   padding: 7px 4px;
   text-align: left;
   text-shadow: none;
 }
-  
-table tr td { 
+
+table tr td {
   background: #DDD;
   color: #47433F;
   border-top: 1px solid #FFF;
 }
 
 /* scroll to top */
-#scroll { 
-  position: relative; 
+#scroll {
+  position: relative;
   width: 1000px;
   margin: 0 auto;
-  bottom: 15px; 
+  bottom: 15px;
   right: 0;
   background: red;
   padding: 0;
 }
-  
-#scroll a { 
+
+#scroll a {
   float: right;
-  margin: 0 0 0 0; 
+  margin: 0 0 0 0;
   padding: 0 0 0 0;
 }
-  
-#scroll a img { 
+
+#scroll a img {
   float: right;
   padding: 0 0 0 0;
   margin: 0;
@@ -420,79 +423,79 @@ Author: Jurriaan Roelofs
 **/
 
 /* Configuration of menu width */
-html body ul.sf-menu ul,html body ul.sf-menu ul li { 
+html body ul.sf-menu ul,html body ul.sf-menu ul li {
   width: 220px;
 }
 
-html body ul.sf-menu ul ul { 
+html body ul.sf-menu ul ul {
   margin: 0 0 0 220px;
 }
 
 /* Framework for proper showing/hiding/positioning */
-ul.sf-menu,ul.sf-menu * { 
+ul.sf-menu,ul.sf-menu * {
   margin: 0;
   padding: 0;
 }
 
-ul.sf-menu { 
+ul.sf-menu {
   display: block;
   position: relative;
 }
-  
-ul.sf-menu li { 
+
+ul.sf-menu li {
   display: block;
   list-style: none;
   float: left;
   position: relative;
 }
-  
-ul.sf-menu li:hover { 
-  visibility: inherit; /* fixes IE7 'sticky bug' */ 
+
+ul.sf-menu li:hover {
+  visibility: inherit; /* fixes IE7 'sticky bug' */
 }
 
-ul.sf-menu a { 
+ul.sf-menu a {
   display: block;
   position: relative;
 }
-  
-ul.sf-menu ul { 
+
+ul.sf-menu ul {
   position: absolute;
   left: 0;
-  width: 150px; 
+  width: 150px;
   top: auto;
   left: -999999px;
 }
-  
-ul.sf-menu ul a { 
-  zoom: 1; /* IE6/7 fix */ 
+
+ul.sf-menu ul a {
+  zoom: 1; /* IE6/7 fix */
 }
 
-ul.sf-menu ul li { 
+ul.sf-menu ul li {
   float: left; /* Must always be floated otherwise there will be a rogue 1px margin-bottom in IE6/7 */
   width: 150px;
 }
-  
-ul.sf-menu ul ul { 
+
+ul.sf-menu ul ul {
   top: 0;
   margin: 0 0 0 150px;
 }
 
-ul.sf-menu li:hover ul,ul.sf-menu li:focus ul,ul.sf-menu li.sf-hover ul, 
+ul.sf-menu li:hover ul,ul.sf-menu li:focus ul,ul.sf-menu li.sf-hover ul,
 ul.sf-menu ul li:hover ul,ul.sf-menu ul li:focus ul,ul.sf-menu ul li.sf-hover ul,
 ul.sf-menu ul ul li:hover ul,ul.sf-menu ul ul li:focus ul,ul.sf-menu ul ul li.sf-hover ul,
-ul.sf-menu ul ul ul li:hover ul,ul.sf-menu ul ul ul li:focus ul,ul.sf-menu ul ul ul li.sf-hover ul { 
+ul.sf-menu ul ul ul li:hover ul,ul.sf-menu ul ul ul li:focus ul,ul.sf-menu ul ul ul li.sf-hover ul {
   left: auto;
 }
-  
+
 ul.sf-menu li:hover ul ul,ul.sf-menu li:focus ul ul,ul.sf-menu li.sf-hover ul ul,
 ul.sf-menu ul li:hover ul ul,ul.sf-menu ul li:focus ul ul,ul.sf-menu ul li.sf-hover ul ul,
 ul.sf-menu ul ul li:hover ul ul,ul.sf-menu ul ul li:focus ul ul,ul.sf-menu ul ul li.sf-hover ul ul,
-ul.sf-menu ul ul ul li:hover ul ul,ul.sf-menu ul ul ul li:focus ul ul,ul.sf-menu ul ul ul li.sf-hover ul ul { 
+ul.sf-menu ul ul ul li:hover ul ul,ul.sf-menu ul ul ul li:focus ul ul,ul.sf-menu ul ul ul li.sf-hover ul ul {
   left: -999999px;
 }
 
 /* autoArrows CSS */
-span.sf-arrow { 
+span.sf-arrow {
   width: 7px;
   height: 7px;
   position: absolute;
@@ -504,24 +507,24 @@ span.sf-arrow {
   font-size: 1px;
 }
 
-ul ul span.sf-arrow { 
+ul ul span.sf-arrow {
   right: 10;
   top: 20px;
   background-position: 0 100%;
 }
 
 /* Theming the menu */
-ul#nav { 
+ul#nav {
   float: left;
 }
 
-ul#nav ul { 
-  background: #4D8D01;
+ul#nav ul {
+  background: #80720B;
   margin-top: 5px;
-  padding-bottom: 15px;
+  padding-bottom: 5px;
 }
 
-ul#nav li a { 
+ul#nav li a {
   padding:5px 20px 6px 20px;
   font: 150% 'News Cycle', arial, sans-serif;
   text-shadow: 1px 1px #294701;
@@ -530,7 +533,34 @@ ul#nav li a {
   margin-right: 2px;
 }
 
-ul#nav li a:hover,ul#nav li a:focus { 
+ul#nav li a:hover,ul#nav li a:focus {
   color: #FFF;
   text-decoration: underline;
 }
+
+#headercontainer{
+  position:relative;
+}
+
+#headertop {
+  position: relative;
+  color: #FFF;
+  padding:10px;
+  border:0px;
+  margin:0px;
+  z-index: 100;
+}
+
+#headerbackground{
+  position: absolute;
+  top:0;
+  left:0;
+  bottom:0;
+  right:0;
+  background-color: #000;
+  border-radius: 7px;
+  opacity:.7;
+  z-index: 0;
+}
+
+
