--- a/django/cmstest/templates/pagetemplate.html
+++ b/django/cmstest/templates/pagetemplate.html
@@ -3,9 +3,9 @@
 <html>
   <head>
     {% render_block "css" %}
-    <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}themes/css3grass/css/style.css" />
+    <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}themes/gears/css/style.css" />
     <!-- modernizr enables HTML5 elements and feature detects -->
-    <script type="text/javascript" src="{{ STATIC_URL }}themes/css3grass/js/modernizr-1.5.min.js"></script>
+    <script type="text/javascript" src="{{ STATIC_URL }}themes/gears/js/modernizr-1.5.min.js"></script>
   </head>
 
   <body>
@@ -13,13 +13,13 @@
     <div id="main">
       <header>
         <div id="logo">
-          <div id="logo_text">
-            <!-- class="logo_colour", allows you to change the colour of the text -->
-            {% placeholder "header" or %}
-            <h1> Page header </h1>
-            <!--<h1><a href="index.html">CCS3<span class="logo_colour">_grass</span></a></h1>-->
-            <!--<h2>Simple. Contemporary. Website Template.</h2>-->
-            {% endplaceholder %}
+          <div id="headercontainer">
+            <h1 id="headertop">
+              {% placeholder "header" or %}
+              Page header
+              {% endplaceholder %}
+            </h1>
+            <div id="headerbackground"></div>
           </div>
         </div>
         <nav>
@@ -55,12 +55,29 @@
       </footer>
     </div>
     <!-- javascript at the bottom for fast page loading -->
-    <script type="text/javascript" src="{{ STATIC_URL }}themes/css3grass/js/jquery.js"></script>
-    <script type="text/javascript" src="{{ STATIC_URL }}themes/css3grass/js/jquery.easing-sooper.js"></script>
-    <script type="text/javascript" src="{{ STATIC_URL }}themes/css3grass/js/jquery.sooperfish.js"></script>
+    <script type="text/javascript" src="{{ STATIC_URL }}themes/gears/js/jquery.js"></script>
+    <script type="text/javascript" src="{{ STATIC_URL }}themes/gears/js/jquery.easing-sooper.js"></script>
+    <script type="text/javascript" src="{{ STATIC_URL }}themes/gears/js/jquery.sooperfish.js"></script>
     <script type="text/javascript">
       $(document).ready(function() {
         $('ul.sf-menu').sooperfish();
+      });
+
+      $(document).ready(function(){
+        $.fn.textWidth = function(){
+          var html_org = $(this).html();
+          var html_calc = '<span>' + html_org + '</span>';
+          $(this).html(html_calc);
+          var width = $(this).find('span:first').width();
+          $(this).html(html_org);
+          return width;
+        };
+        var width = $("#headertop").textWidth();
+        var elem = $("#headertop");
+        var padding = parseInt(elem.css('padding'));
+        var domElem = elem[0];
+        domElem.style.width = width + 'px';
+        domElem.parentElement.style.width = (width + padding*2 + 2) + 'px';
       });
     </script>
     {% render_block "js" %}
