--- a/django/cmstest/templates/pagetemplate.html
+++ b/django/cmstest/templates/pagetemplate.html
@@ -35,14 +35,17 @@
         <div id="sidebar_container">
           <div class="sidebar">
             {% placeholder "sidebar-top" or %}
+            Side Top
             {% endplaceholder %}
           </div>
           <div class="sidebar">
             {% placeholder "sidebar-middle" or %}
+            Side Middle
             {% endplaceholder %}
           </div>
           <div class="sidebar">
             {% placeholder "sidebar-bottom" or %}
+            Side bottom
             {% endplaceholder %}
           </div>
         </div>
@@ -52,6 +55,8 @@
         </div>
       </div>
       <footer>
+        <p><a href="/">Home</a> | <a href="examples.html">Examples</a> | <a href="page.html">A Page</a> | <a href="another_page.html">Another Page</a> | <a href="contact.html">Contact Us</a></p>
+        <p>Copyright © csproto | Design inspired from <a href="http://www.css3templates.co.uk">css3templates</a></p>
       </footer>
     </div>
     <!-- javascript at the bottom for fast page loading -->
