--- a/django/cmstest/assets/themes/gears/css/style.css
+++ b/django/cmstest/assets/themes/gears/css/style.css
@@ -228,8 +228,8 @@ nav {
 
 .sidebar {
   width: 200px;
-  margin: 0 0 0px 0;
-  padding: 0 15px 5px 13px;}
+  margin: 10px;
+  padding: 0 15px 0px 13px;}
 
 .sidebar h3, .content h1 {
   padding: 0 15px 20px 0;
